--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/p5": "^1.4.2",
     "p5": "^1.4.1",
-    "parcel": "^2.5.0"
+    "parcel": "^2.5.0",
+    "tone": "^14.7.77"
   }
 }
